--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "node-sass": "^4.12.0",
     "open-color": "^1.6.3",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.3",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
+    "react-toast-notifications": "^1.4.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "shortid": "^2.2.14"
