--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-todo-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hong-ki.github.io/todo-list",
   "dependencies": {
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
@@ -17,13 +18,16 @@
     "react-toast-notifications": "^1.4.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
+    "serve": "^11.0.0",
     "shortid": "^2.2.14"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-gh-pages": "yarn build && gh-pages -d build",
+    "deploy-static": "yarn build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
