--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy-gh-pages": "yarn build && gh-pages -d build",
-    "deploy-static": "yarn build && serve -s build"
+    "server": "yarn build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
