--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "yarn build && serve -s build"
+    "server": "react-scripts build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
